--- a/underGround/package.json
+++ b/underGround/package.json
@@ -1,19 +1,27 @@
 {
-  "name": "underground",
+  "name": "dapp",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "mocha"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/HK-Zhang/BuckWheat.git"
+  },
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/HK-Zhang/BuckWheat/issues"
+  },
+  "homepage": "https://github.com/HK-Zhang/BuckWheat#readme",
   "dependencies": {
-    "fs-extra": "^8.1.0",
-    "ganache-cli": "^6.4.4",
-    "mocha": "^6.1.4",
+    "fs-extra": "^6.0.1",
+    "ganache-cli": "^6.1.4",
+    "mocha": "^5.2.0",
     "solc": "^0.4.24",
-    "truffle-hdwallet-provider": "^1.0.13",
-    "web3": "^1.0.0-beta.55"
+    "truffle-hdwallet-provider": "0.0.5",
+    "web3": "^1.0.0-beta.34"
   }
 }
